@@ -24,8 +24,13 @@
 		</area>
 	</channelinfo>
 
-	<epginfo> 
-		 <area x="19%" y="77%" width="15%" height="7%" layer="3">
+	<epginfo>
+		<area x="78%" y="95%" width="9%" height="4%" layer="3">
+			<drawtext condition="{currentrecording}" x="0" y="0" animtype="blink" animfreq="1000" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrRed}" text="REC" />
+			<drawtext condition="not{currentrecording}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="REC"/>
+		</area>
+		
+		<area x="19%" y="77%" width="15%" height="7%" layer="3">
 			<drawtext x="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currentstart} - {currentstop}"/>
 		</area>
 <!--single-line display-->
@@ -116,10 +121,10 @@
 			<drawtext condition="{hasVT}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrHigh}" text="VTX" />
 			<drawtext condition="not{hasVT}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="VTX"/>
 		</area>
-		<area x="78%" y="95%" width="9%" height="4%" layer="3">
+		<!--<area x="78%" y="95%" width="9%" height="4%" layer="3">
 			<drawtext condition="{isRecording}" x="0" y="0" animtype="blink" animfreq="1000" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrRed}" text="REC" />
 			<drawtext condition="not{isRecording}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="65%" color="{clrDarkGray}" text="REC"/>
-		</area>
+		</area>-->
 	</statusinfo>
 
 	<audioinfo>
